--- a/src/style.css
+++ b/src/style.css
@@ -230,10 +230,30 @@
     margin: 10px;
     
   }
-
+/*
   .board {
     width: 300px;
     height: 500px;
+    border: 2px solid black;
+  }
+  */
+  /**Test*/
+  .Pictures {
+    margin: 0px;
+    
+    display: flex;
+    
+  }
+  .picture--ikon {
+ 
+    margin-top: 0px;
+    margin-bottom: -5px;
+    width: 50px;
+    height: 50px;
+  }
+  
+  .Board {
+    
     border: 2px solid black;
   }
 
