--- a/src/style.css
+++ b/src/style.css
@@ -205,13 +205,14 @@
 
    .square {
     background: rgb(250, 249, 249);
-    width: 50px;
-    height: 50px;
-    border: #090a0a;
+    width: 48px;
+    height: 48px;
+    border: #646969;
     border-width: 1px;
     border-style: solid;
     display: inline-block;
-   
+    margin-top: 0px;
+    margin-bottom: -7px;
    
 }
 .square h1 {
