--- a/src/style.css
+++ b/src/style.css
@@ -269,6 +269,29 @@
     border: 2px solid black;
   }
 
+  /*Progressbar */
+
+  .progress-container {
+    height: 20;
+    width: 100%;
+    background-color: #e0e0de;
+    border-radius: 50px;
+    margin: 50px;
+  }
+
+  .progress-filler {
+    height: 100%;
+    background-color: orange;
+    border-radius: 20px;
+    text-align: right;
+  }
+
+  .progress-label {
+    padding: 5;
+    color: white;
+    font-weight: bold;
+  }
+
  
 
  
