--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,17 @@
 
 /* Overall */
 
-/*
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  */
   
   body {
-    background-image: linear-gradient(120deg, #83C5BE 0%, #006D77 100%);
+    background-image: url('./pictures/garden_bg_0.jpg');;
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
-    
   }
   
   header {
-    font-size: 2rem;
+    font-size: 3rem;
+    color:#D1E8E2
   }
   
   header,
@@ -28,59 +21,73 @@
     justify-content: center;
     align-items: center;
   }
-  /*
-  form input,
-  form button {
+  
+  form input {
     padding: 0.5rem;
-    font-size: 2rem;
+    width: 200px;
+    font-size: 1.7rem;
     border: none;
     background: white;
   }
-  */
+  
   form button {
-    color: #ff6f47;
+    color: #DA7B93;
     background: #f7fffe;
     cursor: pointer;
     transition: all 0.3s ease;
+    padding: 0.5rem;
+    font-size: 1.7rem;
+    border: none;
+    background: white;
   }
   form button:hover {
-    background: #ff6f47;
+    background: #DA7B93;
     color: white;
   }
+
+  /*Bootstrap buttons*/
+  .btn-primary {
+    color: #2c3531 !important;
+    background-color: #DA7B93 !important;
+    border-color: #2f4454 !important;
+}
+
+.btn-primary:hover {
+  color: #D1E8E2 !important;
+  background-color: #2f4454 !important;
+  border-color: #DA7B93 !important;
+}
  
  /**todo*/
   .todolist-container{
-    background-image: linear-gradient(120deg, #83C5BE 0%, #006D77 100%);
+    background-image: linear-gradient(120deg, #2C3531 0%, #2C3531 100%);
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
+    width: 500px;
   }
-  /*
+  
   .todo-input{
     padding: 0.5rem;
-    font-size: 2rem;
+    font-size: 1.7rem;
     border: none;
     background: white;
   }
   .todo-button{
     padding: 0.5rem;
-    font-size: 2rem;
+    font-size: 1.7rem;
     border: none;
     background: white;
   }
-  */
+  
   .todo-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
-   
-    
+    align-items: center; 
   }
-  
+
   .todo-list {
-    
     list-style: none; 
   }
   
@@ -88,7 +95,7 @@
     margin: 0.5rem;
     background: white;
     font-size: 1.5rem;
-    color: black;
+    color: #2C3531;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -104,7 +111,7 @@
   }
   .trash-btn,
     .complete-btn {
-      background: #ff6f47;
+      background: #DA7B93;
       color: white;
       border: none;
       padding: 1rem;
@@ -112,7 +119,7 @@
       font-size: 1rem;
     }
     .complete-btn {
-      background: rgb(131, 197, 190);
+      background: #376E6F;
     }
  
     .todo-item {
@@ -153,7 +160,7 @@
       overflow: hidden;
     }
     select {
-      color: #ff6f47;
+      color: #DA7B93;
       font-family: "Poppins", sans-serif;
       cursor: pointer;
       width: 12rem;
@@ -166,16 +173,22 @@
       top: 0;
       right: 0;
       padding: 1rem;
-      background: #ff6f47;
+      background: #DA7B93;
       cursor: pointer;
       pointer-events: none;
     }
+
+    /*signup*/
+    .form-group {
+      margin: 10px !important;
+    }
   
+    /*login*/
   .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
-  
+    
   }
   
   .login-input {
@@ -187,7 +200,6 @@
     font-size: 2rem;
     border: none;
     background: white;
-  
   }
   
   .login-btn {
@@ -196,45 +208,146 @@
     font-size: 2rem;
     border: none;
     background: white;
-    color: #ff6f47;
+    color: #DA7B93;
     cursor: pointer;
     transition: all 0.3s ease;
   
   }
    /*Garden*/
 
-   .square {
-    background: rgb(250, 249, 249);
-    width: 48px;
-    height: 48px;
-    border: #646969;
-    border-width: 1px;
-    border-style: solid;
+   .garden {
     display: inline-block;
-    margin-top: 0px;
-    margin-bottom: -7px;
-    color: black;
-    
-   
-}
-.square h1 {
-    color: rgb(10, 10, 10);
-}
-.garden {
-  display: inline-block;
+    background-color: #2C3531;
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .garden-hr {
+    height:2px;
+    border-width:0;
+    color: #FFCB9A;
+    background-color: #376E6F;
+  }
+
+  .garden-hr-end {
+    border: 5px solid;
+    color: #376E6F;
+    background-color: #376E6F;
+  }
+
+  .garden-header {
+    background-image: url('./pictures/garden_bg_2.jpg') ;
+  }
+
+  .garden-header-container {
+    border-color: #D1E8E2;
+    border-style: dotted;
+    background-color: #116466
+  }
+
+   .garden-input {
+    color:#2C3531;
+    margin: 2px;
+    border-radius: 5px;
+    border: none;
+    font-family: "Poppins", sans-serif;
+
+   }
+   /*garden droplist*/
+   .garden-type {
+    margin: 1rem;
+      position: relative;
+      overflow: hidden;
+      
+   }
+   .garden-type::after {
+    content: "\25BC";
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    background: #DA7B93;
+    cursor: pointer;
+    pointer-events: none;
+    
+  } 
+  .delete-garden-button {
+    margin-top: 7px;
+  }
+  .new-type-button,
+  .delete-garden-button, 
+  .create-garden-button {
+    color: #2c3531 ;
+    background-color: #DA7B93;
+    border-color: #2f4454;
+    border-radius: 5px;
+  }
+  .new-type-button:hover,
+  .delete-garden-button:hover,
+  .create-garden-button:hover {
+    color: #D1E8E2;
+    background-color: #2f4454;
+    border-color: #DA7B93;
+  }
+
+.garden-info{
+color:#FFCB9A;
+font-family: "Poppins", sans-serif;
 }
-  /*Login */
+
+/*accordion */
+
+.new-type-button {
+   float: right;
+}
+.accordion-button {
+  background-color: #376E6F !important;
+  color: #D1E8E2 !important;
+  font-family: "Poppins", sans-serif !important;
+  border-color: #646969 !important;
+}
+
+.accordion-button:focus {
+  box-shadow: none !important;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #ffffff !important;
+  background-color: #376E6F !important;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%) !important;
+}
+/*garden square*/
+
+.square {
+  background: rgb(250, 249, 249);
+  width: 48px;
+  height: 48px;
+  border: #646969;
+  border-width: 1px;
+  border-style: solid;
+  display: inline-block;
+  margin-top: 0px;
+  margin-bottom: -1px;
+  margin-left: -1px;
+  color: black; 
+}
+
+.garden-square-img{
+  height: 40px;
+  width : 40px;
+}
+
+.square h1 {
+  color: rgb(10, 10, 10);
+}
 
   /*Drag and Drop*/
 
-  .plant-select {
-    width: 200px;
+  .drag-drop-container {
+
   }
 
-  .hidden {
-    visibility: hidden;
-  }
 
   .ikon {
     height: 50px;
@@ -242,13 +355,44 @@
     margin: 10px;
     
   }
+  .plant-select-container {
+    margin-left: 10px;
+   
+  }
+
+  .sort-plants-container {
+    margin:10px;
+  }
 /*
   .board {
     width: 300px;
     height: 500px;
     border: 2px solid black;
   }
-  */
+*/
+  /*PlantCard*/
+
+  .plant-card {
+
+ 
+  }
+  .plant-card-img {
+
+  }
+
+  
+  .plant-card-h4 {
+    color:#D1E8E2;
+  }
+
+  .plant-card-plantname {
+    color:#FFCB9A;
+  }
+
+  .plant-card-p {
+    color:#FFCB9A;
+    margin: 2px;
+  }
   /**Test*/
   .Pictures {
     margin: 0px;
@@ -264,34 +408,12 @@
     height: 50px;
   }
   
-  .Board {
+  .board {
     
-    border: 2px solid black;
+    border: 7px solid black;
   }
 
-  /*Progressbar */
-
-  .progress-container {
-    height: 20;
-    width: 100%;
-    background-color: #e0e0de;
-    border-radius: 50px;
-    margin: 50px;
-  }
-
-  .progress-filler {
-    height: 100%;
-    background-color: orange;
-    border-radius: 20px;
-    text-align: right;
-  }
-
-  .progress-label {
-    padding: 5;
-    color: white;
-    font-weight: bold;
-  }
-
+ 
  
 
  
