--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
     color: white;
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
+    
   }
   
   header {
@@ -50,6 +51,9 @@
     color: #2c3531 !important;
     background-color: #DA7B93 !important;
     border-color: #2f4454 !important;
+    /*
+    max-width: 200px !important;
+    */
 }
 
 .btn-primary:hover {
@@ -57,6 +61,14 @@
   background-color: #2f4454 !important;
   border-color: #DA7B93 !important;
 }
+
+/*
+.link-button {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+*/
  
  /**todo*/
   .todolist-container{
@@ -65,6 +77,7 @@
     font-family: "Poppins", sans-serif;
     min-height: 100vh;
     width: 500px;
+     
   }
   
   .todo-input{
@@ -142,7 +155,7 @@
     }
   
     /*CUSTOM SELECTOR */
-    select {
+    .select {
       -webkit-appearance: none;
       -moz-appearance: none;
       -ms-appearance: none;
@@ -159,7 +172,7 @@
       position: relative;
       overflow: hidden;
     }
-    select {
+    .select {
       color: #DA7B93;
       font-family: "Poppins", sans-serif;
       cursor: pointer;
@@ -221,6 +234,7 @@
     width: 500px;
     justify-content: center;
     align-items: center;
+    
   }
 
   .garden-hr {
@@ -246,34 +260,48 @@
     background-color: #116466
   }
 
-   .garden-input {
+  .create-garden-container{
+    
+  }
+
+   .garden-input-name,
+   .garden-input-width,
+   .garden-input-height {
     color:#2C3531;
-    margin: 2px;
+    margin: 5px;
+    margin-left: 30px;
     border-radius: 5px;
     border: none;
     font-family: "Poppins", sans-serif;
+   }
 
+   .garden-input-width {
+    float: right;
+    margin-right: 30px;
    }
    /*garden droplist*/
    .garden-type {
-    margin: 1rem;
+      margin: 5px;
+      margin-left: 20px;
+      margin-right: 30px;
       position: relative;
       overflow: hidden;
-      
+      color:#2C3531;
+      appearance: menulist;
+      border-radius: 5px;
+      font-family: "Poppins", sans-serif;
+      height: 26px;
+      width: auto;
+      cursor: pointer;
+      font-size: 1rem;
+      float: right;
    }
-   .garden-type::after {
-    content: "\25BC";
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1rem;
-    background: #DA7B93;
-    cursor: pointer;
-    pointer-events: none;
-    
-  } 
+
+  
   .delete-garden-button {
     margin-top: 7px;
+    margin-left: 10px;
+
   }
   .new-type-button,
   .delete-garden-button, 
@@ -291,9 +319,29 @@
     border-color: #DA7B93;
   }
 
+  .create-button-container {
+    width:500px;
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
+  }
+  .create-garden-button {
+    margin-top: 10px;    
+  }
+
+  .garden-name {
+    color:#D1E8E2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 .garden-info{
-color:#FFCB9A;
+color:#DA7B93;
 font-family: "Poppins", sans-serif;
+display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*accordion */
@@ -306,6 +354,7 @@ font-family: "Poppins", sans-serif;
   color: #D1E8E2 !important;
   font-family: "Poppins", sans-serif !important;
   border-color: #646969 !important;
+ 
 }
 
 .accordion-button:focus {
@@ -344,6 +393,11 @@ font-family: "Poppins", sans-serif;
 
   /*Drag and Drop*/
 
+  .board-container{
+    margin-left: 5px;
+    
+  }
+
   .drag-drop-container {
 
   }
@@ -356,20 +410,43 @@ font-family: "Poppins", sans-serif;
     
   }
   .plant-select-container {
-    margin-left: 10px;
-   
+    margin-left: 5px;
   }
 
   .sort-plants-container {
-    margin:10px;
+    margin:5px;
   }
-/*
-  .board {
-    width: 300px;
-    height: 500px;
-    border: 2px solid black;
+
+  .progressbar-container{
+    margin-top: 10px;
   }
-*/
+ /*droplist */
+  #sortPlants{
+    color:#2C3531;
+    appearance: menulist;
+    font-family: "Poppins", sans-serif;
+    border-radius: 5px;
+    width: 220px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+      font-size: 1rem;
+  }
+
+  #plantType{
+    color:#2C3531;
+    appearance: menulist;
+    font-family: "Poppins", sans-serif;
+    border-radius: 5px;
+    width: 220px;
+    cursor: pointer;
+      font-size: 1rem;
+    
+  }
+
+
+
   /*PlantCard*/
 
   .plant-card {
@@ -377,22 +454,26 @@ font-family: "Poppins", sans-serif;
  
   }
   .plant-card-img {
-
+    margin-left: 5px;
   }
 
   
   .plant-card-h4 {
     color:#D1E8E2;
+    margin-left: 5px;
   }
 
   .plant-card-plantname {
-    color:#FFCB9A;
+    color:#DA7B93;
+    margin-left: 5px;
   }
 
   .plant-card-p {
-    color:#FFCB9A;
+    color:#DA7B93;
     margin: 2px;
+    margin-left: 5px;
   }
+
   /**Test*/
   .Pictures {
     margin: 0px;
@@ -408,10 +489,7 @@ font-family: "Poppins", sans-serif;
     height: 50px;
   }
   
-  .board {
-    
-    border: 7px solid black;
-  }
+ 
 
  
  
