--- a/src/components/garden.css
+++ b/src/components/garden.css
@@ -1,91 +1,77 @@
-
+ /* garden container */
  .garden {
-    display: inline-block;
-    background-color: #2C3531;
-    width: 500px;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--darkGreen);
+    width: 800px;
     justify-content: center;
     align-items: center;
-    
   }
 
-  .garden-hr {
+  /*header*/
+  .garden-header {
+    background-color: var(--mediumBlue);
+    font-family: var(--headerFont);
+    font-size: 4rem;
+    color:#D1E8E2;
+    margin-bottom: 1rem;
+    width: 100%;   
+  }
+
+/*Create garden*/
+  .create-garden-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+     /*garden droplist*/
+     .garden-type {
+        margin-right: 30px;
+        position: relative;
+        overflow: hidden;
+        appearance: menulist;
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: var(--lightGreen);
+     }
+
+   .garden-input-name,
+   .garden-input-width,
+   .garden-input-height,
+   .garden-type {
+    color:var(--darkGreen);
+    background-color: var(--lightGreen);
+    margin: 5px;
+    margin-left: 30px;
+    border-radius: 5px;
+    border: none;
+    font-family: var(--textFont);
+    width: 300px;
+    outline: none;
+    padding-left:5px;
+    height: 30px;
+    font-size: 1rem;
+   }
+
+   .garden-hr {
     height:2px;
     border-width:0;
     color: #FFCB9A;
     background-color: #376E6F;
   }
-
-  .garden-hr-end {
-    border: 5px solid;
-    color: #376E6F;
-    background-color: #376E6F;
+ 
+  .create-button-container {
+    width:500px;
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
   }
 
-  .garden-header {
-    background-image: url('../pictures/garden_bg_2.jpg') ;
+  .create-garden-button {
+    margin-top: 10px;    
   }
 
-  .garden-header-container {
-    border-color: #D1E8E2;
-    border-style: dotted;
-    background-color: #116466
-  }
-
-  .create-garden-container{
-    
-  }
-
-   .garden-input-name,
-   .garden-input-width,
-   .garden-input-height {
-    color:#2C3531;
-    margin: 5px;
-    margin-left: 30px;
-    border-radius: 5px;
-    border: none;
-    font-family: "Poppins", sans-serif;
-    width: 200px;
-   }
-
-   .garden-input-width {
-    float: right;
-    margin-right: 30px;
-   }
-
-   
-   .garden-input-name {
-    float: left;
-   
-   }
-   
-   .garden-input-height {
-    float: left;
-   }
-   
-   /*garden droplist*/
-   .garden-type {
-      margin: 5px;
-      margin-left: 20px;
-      margin-right: 30px;
-      position: relative;
-      overflow: hidden;
-      color:#2C3531;
-      appearance: menulist;
-      border-radius: 5px;
-      font-family: "Poppins", sans-serif;
-      height: 26px;
-      width: auto;
-      cursor: pointer;
-      font-size: 1rem;
-      float: right;
-   }
-
-  
-  .delete-garden-button {
-    margin-top: 7px;
-    margin-left: 10px;
-
-  }
   .new-type-button,
   .delete-garden-button, 
   .create-garden-button {
@@ -93,7 +79,10 @@
     background-color: #DA7B93;
     border-color: #2f4454;
     border-radius: 5px;
+    padding: 3px 7px;
+    font-family: var(--textFont);
   }
+  
   .new-type-button:hover,
   .delete-garden-button:hover,
   .create-garden-button:hover {
@@ -102,29 +91,43 @@
     border-color: #DA7B93;
   }
 
-  .create-button-container {
-    width:500px;
-    display: flex ;
-    align-items: center ;
-    justify-content: center ;
+  /* Gardens */
+
+  .leaf {
+    color: var(--darkGreen);
+    font-size: 3rem;
+    padding: 0px 2px 0px 5px;
+    
   }
-  .create-garden-button {
-    margin-top: 10px;    
+  .gardens-h1 {
+    font-family: var(--headerFont);
+    font-size: 4rem;
+    color:var(--lightGreen);
+    margin: 2rem;
+    background-color: var(--pink);
+    width: 100%;
+    text-align: center;
+    padding:1rem;
+
   }
 
+  /* Garden name och info */
   .garden-name {
-    color:#D1E8E2;
+    color:var(--lightGreen);
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: var(--headerFont);
+    font-size: 3rem;
   }
 
-.garden-info{
+.garden-info {
 color:#DA7B93;
-font-family: "Poppins", sans-serif;
+font-family: var(--textFont);
+font-size: 20px;
 display: flex;
-    justify-content: center;
-    align-items: center;
+justify-content: center;
+align-items: center;
 }
 
 /*accordion */
@@ -150,3 +153,22 @@ display: flex;
   box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%) !important;
 }
 
+.delete-garden-button {
+    margin-top: 7px;
+    margin-left: 10px;
+    font-family: var(--textFont);
+  }
+
+  .garden-hr-end {
+    border: 5px solid;
+    color: #376E6F;
+    background-color: #376E6F;
+   
+  }
+
+  footer {
+    margin-top: 1rem;
+    height: 50px;
+    width: 800px;
+    background-color: var(--mediumBlue);
+  }
