--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,38 @@
 
-/* Overall */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  --pink: #DA7B93;
+  --darkGreen: #2C3531;
+  --lightGreen: #D1E8E2;
+  --darkBlue: #2f4454;
+  --mediumBlue: #376E6F;
 
+  --headerFont: "Sacramento", cursive;
+  --textFont: "Alice", serif;
   
+}
+  
+.alice-regular {
+  font-family: "Alice", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.sacramento-regular {
+  font-family: "Sacramento", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
   body {
     background-image: url('./pictures/garden_bg_0.jpg');;
     color: white;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--textFont);
     min-height: 100vh;
-  }
-  
-  header {
-    font-size: 3rem;
-    color:#D1E8E2
+    width: 800px;
+    margin: auto;
   }
   
   header,
@@ -28,6 +49,7 @@
     font-size: 1.7rem;
     border: none;
     background: white;
+ 
   }
   
   form button {
@@ -61,13 +83,7 @@
   border-color: #DA7B93 !important;
 }
 
-/*
-.link-button {
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-}
-*/
+
  
  /**todo*/
   .todolist-container{
