fix garden board

--- a/src/style.css
+++ b/src/style.css
@@ -243,7 +243,33 @@
   }
   
  
- 
+ /*
+      <span class="material-symbols-outlined leaf">
+          nest_eco_leaf
+        </span>
+        
+      
+        <span class="material-symbols-outlined leaf">
+        emoji_nature
+        </span>
+
+       <span class="material-symbols-outlined">
+        psychiatry
+        </span>
+
+        <span class="material-symbols-outlined">
+        deceased
+        </span>
+
+        <span class="material-symbols-outlined">
+        local_florist
+        </span>
+
+        <span className="material-symbols-outlined leaf">
+          eco
+        </span>
+      
+  */
 
  
  
