--- a/src/components/gardenBoard.css
+++ b/src/components/gardenBoard.css
@@ -1,81 +1,57 @@
- /*Drag and Drop*/
 
- .board-container{
-    margin-left: 5px;
+ .garden-board-container{
+  display: flex;
+  flex-direction: row-reverse;
+  
+  gap:2rem;
+  
     
   }
 
-
-  .ikon {
-    height: 50px;
-    width: 50px;
-    margin: 10px;
-    
+  .select-container {
+    display:flex;
+    flex-direction: column;
+    max-width: 45%;
   }
-  .plant-select-container {
-    margin-left: 5px;
-  }
-
-  .sort-plants-container {
-    margin:5px;
-  }
-
-  .progressbar-container{
-    margin-top: 10px;
-  }
- /*droplist */
-  #sortPlants{
-    color:#2C3531;
+  /*select drop down*/
+  #plantType,
+  #sortPlants {
+    color:var(--darkGreen);
+    background-color: var(--lightGreen);
     appearance: menulist;
-    font-family: "Poppins", sans-serif;
+    font-family: var(--textFont);
     border-radius: 5px;
+    border: none;
     width: 220px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 5px;
+    height: 30px;
+    padding-left:5px;
+    font-size: 1rem;
+  }
+
+  /*  The board */
+  .board-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-      font-size: 1rem;
+    flex-direction: column;
   }
 
-  #plantType{
-    color:#2C3531;
-    appearance: menulist;
-    font-family: "Poppins", sans-serif;
-    border-radius: 5px;
-    width: 220px;
-    cursor: pointer;
-      font-size: 1rem;
-    
+  .board {
+  
   }
 
 
+  /* Progressbar container*/
+  .progressbar-container{
 
-  /*PlantCard*/
-
-  .plant-card {
-
+  }
  
-  }
-  .plant-card-img {
-    margin-left: 5px;
-  }
+  
+
+
 
   
-  .plant-card-h4 {
-    color:#D1E8E2;
-    margin-left: 5px;
-  }
-
-  .plant-card-plantname {
-    color:#DA7B93;
-    margin-left: 5px;
-  }
-
-  .plant-card-p {
-    color:#DA7B93;
-    margin: 2px;
-    margin-left: 5px;
-  }
 
   /**Test*/
   .Pictures {
@@ -90,4 +66,20 @@
     width: 50px;
     height: 50px;
   }
+
+
+
+
+     /*garden droplist*/
+     .garden-type {
+        margin-right: 30px;
+        position: relative;
+        overflow: hidden;
+        appearance: menulist;
+        border-radius: 5px;
+        cursor: pointer;
+        background-color: var(--lightGreen);
+     }
+
+  
   
