--- a/src/components/garden.css
+++ b/src/components/garden.css
@@ -28,8 +28,6 @@
 
      /*garden droplist*/
      .garden-type {
-        margin-right: 30px;
-        position: relative;
         overflow: hidden;
         appearance: menulist;
         border-radius: 5px;
@@ -44,7 +42,6 @@
     color:var(--darkGreen);
     background-color: var(--lightGreen);
     margin: 5px;
-    margin-left: 30px;
     border-radius: 5px;
     border: none;
     font-family: var(--textFont);
@@ -139,11 +136,14 @@ align-items: center;
 .accordion-button {
   background-color: #376E6F !important;
   color: #D1E8E2 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: var(--textFont) !important;
   border-color: #646969 !important;
  
 }
 
+.accordion-body {
+  height: 9rem;
+}
 .accordion-button:focus {
   box-shadow: none !important;
 }
@@ -154,10 +154,19 @@ align-items: center;
   box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%) !important;
 }
 
+.new-type-select {
+  color:var(--darkGreen);
+  margin: 5px;
+  border-radius: 5px;
+  border: none;
+  font-family: var(--textFont);
+  height: 30px;
+  font-size: 1rem;
+}
+
 .delete-garden-button {
-    margin-top: 7px;
-    margin-left: 10px;
-    font-family: var(--textFont);
+  margin-top: 5px;
+  
   }
 
   .garden-hr-end {
